--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=StudentUplaod
+spring.datasource.url=jdbc:mysql://localhost:3306/studentupload
+spring.datasource.username=root
+spring.datasource.password=5158
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
